--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "bcs-payroll-loan-customer-documents",
-  "version": "10.0.0",
+  "name": "The movie review",
+  "version": "0.0.1",
   "description": "Proyecto base para la construcción de microservicios nestjs con lineamientos clean architecture",
   "author": "Sebastian Traslaviña",
   "modified": "Privado",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -29,21 +28,18 @@
     "@nestjs/core": "^10.1.3",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.1.3",
-    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/terminus": "^10.0.1",
+    "@nestjs/typeorm": "^10.0.0",
     "async-local-storage": "^2.3.1",
-    "cache-manager": "^5.2.3",
-    "cache-manager-redis-store": "^3.0.1",
-    "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cls-rtracer": "^2.6.3",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
-    "cz": "^1.8.2",
     "dayjs": "^1.11.9",
     "elastic-apm-node": "^3.48.0",
     "formula-pmt": "^1.0.1",
@@ -52,11 +48,13 @@
     "nats": "^2.15.1",
     "nestjs-real-ip": "^3.0.1",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "xml2js": "^0.6.2"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
