--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "__mocks__"],
-  "compilerOptions": {
-    "resolveJsonModule": true
-  }
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
