--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
     "@nestjs/jwt": "^10.1.0",
+    "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/microservices": "^10.1.3",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.1.3",
@@ -41,11 +42,9 @@
     "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
     "dayjs": "^1.11.9",
-    "elastic-apm-node": "^3.48.0",
     "formula-pmt": "^1.0.1",
     "goal-seek": "^0.1.4",
     "moment": "^2.29.4",
-    "nats": "^2.15.1",
     "nestjs-real-ip": "^3.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.2",
@@ -60,7 +59,7 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@nestjs/cli": "^10.1.11",
-    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.1.3",
     "@release-it/conventional-changelog": "^7.0.0",
     "@types/cache-manager": "^4.0.2",
