--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cm": "git add . && git-cz"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
@@ -35,6 +36,7 @@
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
     "async-local-storage": "^2.3.1",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cls-rtracer": "^2.6.3",
