Fix: var port and add a .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,12 @@
 PORT=3000
-REDISKEY=<YOUR_REDIS_AZURE_KEY>
-REDISURL=<YOUR_REDISURL>
-REDISPORT=<REDIS_AZURE_PORT>
-REDISTTL=<86400 this is 24 Hours in seconds  -----   Para el set de pruebas que necesita Mauricio por favor colocar 300 Segundos para hacer validaciones>
-DEVELOPMENT=<true>
-APIOAUTHURL=<YOUR_API_CORE_TOKEN_URL>
-APIOAUTHCLIENTSECRET=<YOUR_API_CORE_CLIENT_SECRET>
-APIOAUTHCLIENTID=<YOUR_API_CORE_CLIENT_ID>
-PAYROLLSIMULATORMONGODBCOLLECTION =<YOUR_PAYROLL_SIMULATOR_MONGO_DB_COLLECTION_NAME>
-PAYROLLLOANJWTSECRET = <PAYROLL_LOAN_JWT_SECRET>
-PAYROLLCUSTOMERCOREBLACKLISTMANAGEMENTURL=<YOUR_BACK_MANAGEMENT_LIST_URL>
-PAYROLLCUSTOMERAPICLIENTIDBLACKLISTMANAGEMENT=<YOUR_BACK_MANAGEMENT_LIST_CLIENT_ID>
-PAYROLLCUSTOMERAPICLIENTSECRETBLACKLISTMANAGEMENT=<YOUR_BACK_MANAGEMENT_LIST_CLIENT_SECRET>
-APISBCSPEM = <YOUR_SERVICE_PEM_TO_MULESOFT>
-APISBCSCERT = <YOUR_SERVICE_CERT_TO_MULESOFT>
-APISBCSKEY = <YOUR_SERVICE_KEY_TO_MULESOFT>
-APISBCSAVAILABLE = <YOUR_API_BCS_AVIABLE_VALUE>
-PAYROLLSIMULATORLOANAGREEMENTTTL = <YOUR_PAYROLL_LAN_AGREEMENT_TTL>
-PAYROLLJWTDURATION = <YOUR_JWT_DURATION_STRING>
-PAYROLLLOANCORSORIGIN = <YOUR_CORS_ORIGIN_CONFIGURATION>
+JWTSECRET="data@4545.!prue"
+JWTDURATION="1h"
+ENCRYPTKEY= claveDeencryptado123
+DB_TYPE=postgres
+PG_USER=postgres
+PG_PASSWORD=Sebas12..97
+PG_DB=postgres
+PG_PORT=5432
+PG_HOST=localhost
+TOKEN_TMDB= TOKEN_TMDB
+URL_TMDB_MOVIE= https://api.themoviedb.org/3/movie/
